--- a/w02.md
+++ b/w02.md
@@ -5,31 +5,30 @@ permalink: /W02/
 # Top 10 List of Week 02
 
 1. [Security vs Protection](https://techdifferences.com/difference-between-security-and-protection.html)  
-   l
+   This website dives deep into differences between security and protection within several aspects like policy, handles, mechanism, etc. Key differences and conclusion also helps giving understanding of this topic.
+ 
+2. [Is Linux security better](https://www.computerworld.com/article/3252823/why-linux-is-better-than-windows-or-macos-for-security.html)  
+    A hot topic to cover. After reading this I conclude that windows is obviously the biggest target for an attack considering it's the most popular OS, but Linux has the potential to be the most secure but requires a "power user".
 
-2. []()  
-    K
+3. [Linux File Permissions](https://www.dummies.com/computers/operating-systems/linux/linux-security-and-file-permissions/)  
+    Some tips and infos about permissions for people using Linux. It's always pretty handy to know.
 
-3. []()  
-    B
+4. [Symmetric vs Asymmetric Encryption](https://sectigostore.com/blog/5-differences-between-symmetric-vs-asymmetric-encryption/#:~:text=Asymmetric%20encryption%20is%20the%20more,be%20deployed%20alone%20or%20together.&text=Only%20one%20key%20(symmetric%20key,encrypt%20and%20decrypt%20the%20message.)  
+    This cryptography basic really matters in term of how global network works safely. This is a thorough explanation of it.
 
-4. []()  
-    N
+5. [What is Firewall](https://www.forcepoint.com/cyber-edu/firewall)  
+    To answer my curiousity of what Firewall is as I've been hearing this term for a long time but haven't really understood what it is.
 
-5. []()  
-    A
+6. [Hash Algorithms Explained](https://www.thesslstore.com/blog/difference-sha-1-sha-2-sha-256-hash-algorithms/)  
+    A very informative read explaining in details Hash Algorithms including SHA-1, SHA-2, and SHA-256. Some key points to take are it's irreversible and unique, there are bit differences between them, and quite complicated mathematics behind it.
 
-6. []()  
-    T
+7. [What is special about C/C++?](https://www.quora.com/What-is-special-about-C-and-C++-Why-do-they-never-get-outdated-even-after-the-arrival-of-Java-Python-etc)  
+    A forum thread answering this question. I think this is a reasonable question to ask knowing programming has come a long way since years ago with such rapid improvement but still C/C++ has not been deprecated.
 
-7. []()  
-    T
+8. [Password Tips](https://blog.avast.com/strong-password-ideas)  
+    Good password is one of the simplest thing you can do to save yourself from any risk of being breached. These practical password ideas can inspire you to be a better user.
 
-8. []()  
-    V
+9. [Safe Web Browsing](https://www.rainn.org/articles/safe-web-browsing)  
+    Not many people realize how fragile it is surfing through web without knowing what threat could they come up to. Some info like this should help raise awareness to prevent any harmful act online.
 
-9. []()  
-    O
-
-10. []()  
-    a
+10. [Cybersecurity in Quantum Computing](https://www.forbes.com/sites/forbestechcouncil/2021/01/04/how-quantum-computing-will-transform-cybersecurity/?sh=501937be7d3f)     Very interesting topic to learn for the future. Quantum computing is still years to come but knowing how it works and affects security might be the biggest most interesting challenge. Based on this article, huge improvement is expected from utilization of quantum computing professionally.
