--- a/w02.md
+++ b/w02.md
@@ -13,7 +13,7 @@ permalink: /W02/
 3. [Linux File Permissions](https://www.dummies.com/computers/operating-systems/linux/linux-security-and-file-permissions/)  
     Some tips and infos about permissions for people using Linux. It's always pretty handy to know.
 
-4. [Symmetric vs Asymmetric Encryption](https://sectigostore.com/blog/5-differences-between-symmetric-vs-asymmetric-encryption/#:~:text=Asymmetric%20encryption%20is%20the%20more,be%20deployed%20alone%20or%20together.&text=Only%20one%20key%20(symmetric%20key,encrypt%20and%20decrypt%20the%20message.)  
+4. [Symmetric vs Asymmetric Encryption](https://sectigostore.com/blog/5-differences-between-symmetric-vs-asymmetric-encryption/)  
     This cryptography basic really matters in term of how global network works safely. This is a thorough explanation of it.
 
 5. [What is Firewall](https://www.forcepoint.com/cyber-edu/firewall)  
@@ -31,4 +31,5 @@ permalink: /W02/
 9. [Safe Web Browsing](https://www.rainn.org/articles/safe-web-browsing)  
     Not many people realize how fragile it is surfing through web without knowing what threat could they come up to. Some info like this should help raise awareness to prevent any harmful act online.
 
-10. [Cybersecurity in Quantum Computing](https://www.forbes.com/sites/forbestechcouncil/2021/01/04/how-quantum-computing-will-transform-cybersecurity/?sh=501937be7d3f)     Very interesting topic to learn for the future. Quantum computing is still years to come but knowing how it works and affects security might be the biggest most interesting challenge. Based on this article, huge improvement is expected from utilization of quantum computing professionally.
+10. [Cybersecurity in Quantum Computing](https://www.forbes.com/sites/forbestechcouncil/2021/01/04/how-quantum-computing-will-transform-cybersecurity/?sh=501937be7d3f)  
+    Very interesting topic to learn for the future. Quantum computing is still years to come but knowing how it works and affects security might be the biggest most interesting challenge. Based on this article, huge improvement is expected from utilization of quantum computing professionally.
