--- a/w09.md
+++ b/w09.md
@@ -4,32 +4,32 @@ permalink: /W09/
 
 # Top 10 List of Week 09
 
-1. []()  
-   A
+1. [Types of Storage Devices](https://www.ahirlabs.com/2019/02/01/different-types-of-storage-devices/)  
+   For years storage devices have been improving so much even in various sizes and forms. As one of the main thing we study this week is about storage, it's very interesting to recall what are the differences between types of storage devices to date.
 
-2. []()  
-   A
+2. [How Hard Drives Work?](https://www.youtube.com/watch?v=wteUW2sL7bc)  
+   We can now take for granted the way to operate a machine with storage system. Ever wonder how it actually works in the low level? Here is a video explaining how hard drives work as our main storage device.
 
-3. []()  
-   A
+3. [Cloud Storage vs Local Storage](https://mydatascope.com/blog/en/cloud-storage-vs-local-storage-what-is-the-right-for-your-business/)  
+   With the improvement of technology, storage can be presented by physical object and also by "cloud". This different way of storing data comes up with ups and downs, and this web will tell you more about it!
 
-4. []()  
-   A
+5. [Disk Partition: What, Why, How](https://www.howtogeek.com/184659/beginner-geek-hard-disk-partitions-explained/)  
+   Disk partition is important to create one or more containers into a single disk as you can't just start writing files to a completely blank drive. What is it actually? Why does it matter? How does it work? You will get the answers here immediately!
 
-5. []()  
-   A
+4. [SSD vs HDD](https://freedom251.com/ssd-vs-hdd/)  
+   I'm sure you've seen this SSD vs HDD thing a lot by now. But have you really taken your time knowing what each one of them is? Very interesting and relatable topic as it's directly related to our daily work using laptop.
 
-6. []()  
-   A
+6. [Volatile vs Non Volatile Storage](https://www.tutorialspoint.com/Volatile-Storage-vs-Non-Volatile-Storage)  
+   We might already know these terms before even from DDP1 class from my experience. But still it's an important consept to learn more about regarding type of storage. 
 
-7. []()  
-   A
+7. [What happens when you switch on a computer?](https://tldp.org/HOWTO/Unix-and-Internet-Fundamentals-HOWTO/bootup.html)  
+   An excellent question to ask! There are some steps regarding its relation to OS, BIOS, Bootloader, and other terms to cover and this web gives summary of what actually happens when you switch on a computer in quite simple way.
 
-8. []()  
-   A
+8. [Bootloader Explained](https://www.ionos.com/digitalguide/server/configuration/what-is-a-bootloader/)  
+   Bootloader is essentially an operating system software that loads into a working memory after computer start-up. How does it work and other questions you can think of might also be explained here.
 
-9. []()  
-   A
+9. [Seek Time](https://www.techopedia.com/definition/3558/seek-time)  
+   Seek time basically is the time taken for a hard disk controller to locate a specific stored data. This simple article gives a good overview of how does it measured as it's one of the parameter you can look for when searching for disk's performance.
 
-10. []()  
-   A
+10. [Rotating Disk Reading Techniques? CAV vs CLV](https://compscistation.com/cav-vs-clv/)  
+   I was surprised when I found out that there are ways of scanning data from a rotating optical storage: CAV and CLV. This web gives a very nice and to the point explanation of differences and advantages/disadvantages between the two.
